<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".labSQL.example.ExCreateActivity">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/etFio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fio"
        android:paddingEnd="@dimen/margin_extra"
        android:paddingStart="@dimen/margin_extra" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_hostel"
        android:paddingEnd="@dimen/margin_extra"
        android:paddingStart="@dimen/margin_extra" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:paddingEnd="@dimen/margin_extra"
        android:paddingStart="@dimen/margin_extra" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/etGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numbe_group"
        android:paddingEnd="@dimen/margin_extra"
        android:paddingStart="@dimen/margin_extra" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAdd" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open" />

</LinearLayout>