<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnFragmnet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragments"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_extra"
        android:layout_marginStart="@dimen/margin_extra"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnSQL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sql"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_extra"
        android:layout_marginStart="@dimen/margin_extra"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnNetworkJSON"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_extra"
        android:layout_marginStart="@dimen/margin_extra"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>